# SSG

./: CMakeLists.txt  vcpkg.json
include/: distance.h  index_ssg.h  neighbor.h  util.h
src/: CMakeLists.txt  index_ssg.cpp  util.cpp
tests/: CMakeLists.txt  test_ssg_index_sift1m.cpp  test_ssg_index_sift1m_evaluation.cpp  test_ssg_index_sift1m_stats.cpp
